--- a/toots.css
+++ b/toots.css
@@ -4,6 +4,8 @@ html, body{
 	height: 100%;
 }
 .container{
+	position: relative;
+	vertical-align: bottom;
 	display: inline-block;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	min-width: 10em;
@@ -25,10 +27,13 @@ html, body{
 #container_4_1{
 	width: 10em;
 	height: 10em;
+	margin-top: 10em;
 }
 #container_4_2{
 	width: 10em;
 	height: 10em;
+	position: absolute;
+	top: 0;
 }
 /* 
 	ANIMATIONS
