--- a/toots.css
+++ b/toots.css
@@ -11,7 +11,6 @@ html, body{
 	min-width: 10em;
 	min-height: 10em;
 	margin: 1em;
-	z-index: 10000;
 }
 #container_2{
 	width: 20em;
@@ -42,11 +41,14 @@ html, body{
 
 /* General Styles */
 .load-background{
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
   position: absolute;
   width: 100%;
   height: 100%;
   text-align: center;
+	top: 0;
+	left: 0;
+	z-index: 10000;
 }
 
  /* Weel */
